# mesh-kernel

./: .gitignore  .gitmodules  CMakeLists.txt  EMBER.md  README.md
examples/: ember_example.cc
src/: ember-main.cc  ember-test.cc  main.cc
src/core/: ExactSeidelSolverPoint.cc  ExactSeidelSolverPoint.hh  benchmark_data.hh  ember-app.cc  ember-app.hh  ember-classify.cc  ember-classify.hh  ember-csg.cc  ember-csg.hh  ember-intersect.cc  ember-intersect.hh  kdop.cc  kdop.hh  kernel-app.cc  kernel-app.hh  kernel-plane-cut.cc  kernel-plane-cut.hh  lp-feasibility.cc  lp-feasibility.hh  options.hh
src/imgui/: imfilebrowser.hh
src/integer-plane-geometry/: any_point.hh  are_parallel.hh  classify.hh  fwd.hh  geometry.hh  integer_math.hh  intersect.hh  line.hh  plane.hh  point.hh
src/rendering/: renderable_set.cc  renderable_set.hh
